<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aekan.navya.lpgbooking.AddLPGConnection"

    tools:showIn="@layout/activity_add_lpgconnection">
    <ScrollView
        android:id="@+id/form_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout

            android:id="@+id/form_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_lpgconnection_userprompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lpgbooking_userprompt_marginBottom"
                android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                android:layout_marginTop="@dimen/lpgbooking_userprompt_margintop"
                android:text="@string/Add_Connection_User_Prompt"
                android:textSize="@dimen/addconnection_user_prompt_textsize"
                />
            <TextView
                android:id="@+id/add_lpgconnection_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_lpgconnection_userprompt"
                android:layout_marginBottom="@dimen/lpgbooking_instruction_marginBottom"
                android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                android:layout_marginTop="@dimen/addconnection_margin_instruction_top"
                android:text="@string/Add.Connection.User.Instructions"
                android:textColor="@color/colorTertiaryBlue"
                android:textSize="@dimen/addconnection_user_instruction_textsize"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_lpgconnectionnamelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_lpgconnection_instructions"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_lpgconnectionnameedittext"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Connection_Name"
                    android:paddingBottom="2dp"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_providerlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_lpgconnectionnamelabel"
                android:layout_marginTop="@dimen/add_label_margintop"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled = "true"
                app:hintAnimationEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/add_provideredittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:completionThreshold="@integer/autocomplete_threshold"
                    android:dropDownAnchor="@id/add_provideredittext"
                    android:dropDownHeight="@dimen/autocomplete_dropdownheight"
                    android:dropDownWidth="wrap_content"
                    android:hint="@string/Hint_Provider"
                    android:popupBackground="@color/colorPrimary"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_agencylabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/add_providerlabel"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">
                <EditText
                    android:id="@+id/add_agencyedittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Agency_Name"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_distributorphonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/add_agencylabel"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_distributorphonenumber_edittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Agency"
                    android:inputType="number"
                    android:textSize="@dimen/add_text_size_lable" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_agencyphonelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/add_distributorphonenumber"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled = "true"
                app:hintAnimationEnabled="true">
                <EditText
                    android:id="@+id/add_agencyphoneedittext"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_alignTop="@+id/add_providerlabel"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Hint_Agency_Phone"
                    android:inputType="number"
                    android:textSize="@dimen/add_text_size_lable" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_connectionsmslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_agencyphonelabel"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                >
                <EditText
                    android:id="@+id/add_connectionsmsnumber"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="Enter SMS No"
                    android:inputType="number"
                    android:textSize="@dimen/add_text_size_lable"
                    />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_connectionidlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_connectionsmslayout"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_connectionid"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Add_Connection_id"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/add_lastbookeddate_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/add_connectionidlabel"
                android:orientation="horizontal"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_lastbookeddatelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/add_text_size_lable"
                    app:counterEnabled="true"
                    app:errorEnabled = "true"
                    app:hintAnimationEnabled="true">
                    <EditText
                        android:id="@+id/add_lastbookeddate"
                        android:layout_width="@dimen/lastbookeddate_width"
                        android:layout_height="@dimen/textinputlayout_height"
                        android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                        android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                        android:hint="@string/Add_Last_Booked_Date"
                        android:textSize="@dimen/add_text_size_lable"    />

                </android.support.design.widget.TextInputLayout>
                <ImageButton
                    android:id="@+id/btn_calendarimage"
                    android:layout_width="@dimen/calendarimage_width"
                    android:layout_height="@dimen/calendarimage_height"
                    android:layout_marginEnd="@dimen/calendarmargin"
                    android:layout_marginLeft="@dimen/calendarmargin"
                    android:layout_marginRight="@dimen/calendarmargin"
                    android:layout_marginStart="@dimen/calendarmargin"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorWhite"
                    android:contentDescription="@string/Calendar_Accessibility_message"
                    android:scaleType="fitXY"
                    android:src="@drawable/iconfinder_calendar_green"
                    />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_connectionexpirydatelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_lastbookeddate_layout"
                android:textSize="@dimen/add_text_size_lable"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/add_connectionexpiry"
                    android:layout_width="@dimen/textfield_width"
                    android:layout_height="@dimen/textinputlayout_height"
                    android:layout_marginLeft="@dimen/add_edit_text_leftmargin"
                    android:layout_marginStart="@dimen/add_edit_text_leftmargin"
                    android:hint="@string/Add_Expiry_days"
                    android:inputType="number"
                    android:textSize="@dimen/add_text_size_lable" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
