<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"

    android:layout_height="wrap_content" android:fitsSystemWindows="true"
    tools:context="com.aekan.navya.lpgbooking.AddLPGConnection">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addlpg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbarheight"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:title="@string/Add_connection_activity_title"
            />
    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/lpg_relative_layout"
        layout="@layout/content_add_lpgconnection" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_connection"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="0dp"
        android:scaleType="center"
        android:src="@drawable/save_button_statelist"
        app:elevation="0dp"
        app:fabSize="normal"
        app:layout_anchor="@id/lpg_relative_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>


