...
            android:scrollbars="vertical"
                android:layout_marginBottom="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_bottom_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:scaleType="center"
...
